Fixed z-index of the live player

--- a/themes/experience-engine/assets/styles/components/live-player.css
+++ b/themes/experience-engine/assets/styles/components/live-player.css
@@ -7,6 +7,7 @@
 	border-top: 1px solid #ddd;
 	padding: 20px;
 	max-height: 74px;
+	z-index: 50;
 }
 
 .play-btn,
